# ai-hack-be

./: .dockerignore  .env.example  Dockerfile  README.md  build.gradle  docker-compose.prod.yml  docker-compose.yml  init.sql  pyproject.toml  requirements.txt  settings.gradle
.github/workflows/: deploy.yml
app/: config.py  main.py
app/core/: database.py
app/model/: models.py
app/rag/: base.py  challenge_rag.py  onboarding_rag.py  prompts.py  report_rag.py
app/repository/: ai_user_repository.py  base_user_repository.py  challenge_repository.py  onboarding_repository.py  record_repository.py  report_repository.py
app/repository/db/: db_challenge_repository.py  db_record_repository.py  db_user_repository.py
app/routes/: ai_router.py  challenge_router.py  record_router.py  user_router.py
app/schema/: ai_schema.py  challenge_schema.py  record_schema.py  user_schema.py
app/service/: ai_service.py  user_service.py
src/main/java/com/ktb/ktb_tf_13_hack_be/: KtbTf13HackBeApplication.java
src/main/resources/: application.yml
src/test/java/com/ktb/ktb_tf_13_hack_be/: KtbTf13HackBeApplicationTests.java
tests/: db_connect.py
