[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "marha-hwang",email = "hwangharam@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.1,<0.122.0",
    "uvicorn>=0.20.0,<1.0.0",
    "python-jose>=3.5.0,<4.0.0",
    "python-multipart>=0.0.5,<0.1.0",
    "pandas>=2.3.3,<3.0.0",
    "passlib==1.7.4",
    "bcrypt==4.0.1",
    "sqlalchemy>=2.0.44,<3.0.0",
    "pymysql>=1.1.2,<2.0.0",
    "openai>=2.8.1,<3.0.0",
    "pydantic-settings>=2.12.0",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.5",
    "aiomysql>=0.3.2",
    "greenlet>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
